--- a/src/app/styles/globals.scss
+++ b/src/app/styles/globals.scss
@@ -2,6 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer components{
+    .hover-rotate-180{
+        @apply inline-block h-8 w-auto transform-gpu transition-all duration-500 ease-in-out group-hover:translate-x-1 group-hover:rotate-[360deg] group-hover:scale-[87%];
+    }
+}
+
+
 @import './fonts';
-@import './variables'
+@import './variables';
+@import './classess'
+
 
